--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sass": "^1.66.1",
     "vite": "^6.0.6",
     "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-setup-extend-plus": "^0.1.0",
     "vue": "^3.5.13"
   },
   "browserslist": [
